--- a/recipes/templates/recipes/partials/recipe.html
+++ b/recipes/templates/recipes/partials/recipe.html
@@ -1,9 +1,17 @@
 <div class="recipe recipe-list-item">
+    {% if recipe.cover %}
+        <div class="recipe-cover">
+            <a href="{% url "recipes:recipe" recipe.id %}">
+                <img src={{recipe.cover.url}} alt="Temporário">
+            </a>
+        </div>
+    {% else %}
     <div class="recipe-cover">
         <a href="{% url "recipes:recipe" recipe.id %}">
-            <img src={{recipe.cover.url}} alt="Temporário">
+            <img src="https://placehold.co/1280x720?text=Recipes" alt="Temporário">
         </a>
     </div>
+    {% endif %}
     <div class="recipe-title-container">
         <a class="recipe-title" href="{% url "recipes:recipe" recipe.id %}">
             <h2>{{recipe.title}}</h2>
@@ -12,18 +20,32 @@
     <div class="recipe-author">
         <span class="recipe-author-item">
             <i class="fas fa-user"></i>
-            {{recipe.author.first_name}} {{recipe.author.last_name}}
+            {% if recipe.author is not None %}
+                {% if recipe.author.first_name %}
+                    {{recipe.author.first_name}} {{recipe.author.last_name}}
+                {% else %}
+                    {{recipe.author.username}}
+                {% endif %}
+            {% else %}
+                Anônimo
+            {% endif %}
         </span>
         <span class="recipe-author-item">
             <i class="fas fa-calendar-alt"></i>
             {{recipe.created_at|date:'d/m/Y'}}
         </span>
         <span class="recipe-author-item">
-            <a href="/recipes/category/cafe-da-manha/">
+            {% if recipe.category is not None %}
+            <!--a href="/recipes/category/{{recipe.category.id}}"-->
+                <a href="{% url 'recipes:category' recipe.category.id %}"
+                    <i class="fas fa-layer-group"></i>
+                        <span>{{recipe.category.name|title}}</span>
+                        <!--<span>{{recipe.category.name|capfirst}}</span>-->
+                </a>
+            {% else %}
                 <i class="fas fa-layer-group"></i>
-                <span>{{recipe.category.name|title}}</span>
-                <!--<span>{{recipe.category.name|capfirst}}</span>-->
-            </a>
+                <span>Sem Categoria</span>
+            {% endif %}
         </span>
     </div>
     <div class="recipe-content">
@@ -63,7 +85,11 @@
 
     {% if is_detail_page is True %}
     <div class="preparation_steps">
-        {{ recipe.preparation_steps|linebreaksbr }}
+        {% if recipe.preparation_steps_is_html is True %}
+            {{ recipe.preparation_steps|safe }}
+        {% else %}
+            {{ recipe.preparation_steps|linebreaksbr }}
+        {% endif %}
     </div>
     {% endif %}
 </div>
