--- a/recipes/templates/recipes/pages/category.html
+++ b/recipes/templates/recipes/pages/category.html
@@ -7,6 +7,10 @@
     
     {% for recipe in recipes %}
         {% include 'recipes/partials/recipe.html' %}
+    {% empty %}
+        <span class="no-category-found">
+            No Category Found
+        </span>
     {% endfor %}
 
 </div>
