--- a/authors/templates/authors/pages/register_view.html
+++ b/authors/templates/authors/pages/register_view.html
@@ -6,7 +6,7 @@
 
 {% block content %}
   <div class="main-content center container">
-    <h2>Register {{ request.session.number }}</h2>
+    <h2>Register</h2>
   </div>
 
   {% include "global/partials/message.html" %}
