--- a/base_static/global/css/styles.css
+++ b/base_static/global/css/styles.css
@@ -360,6 +360,19 @@ h6 {
     color: white;
 }
 
+.plaintext-button {
+    display: inline;
+    border: none;
+    background: none;
+    cursor: pointer;
+    color: var(--color-primary);
+    font-size: 1.6rem;
+}
+
+.inline-form {
+    display: inline;
+}
+
 /* messages */
 .messages-container {
     display: flex;
