--- a/base_static/global/css/styles.css
+++ b/base_static/global/css/styles.css
@@ -69,6 +69,15 @@ h6 {
     font-family: var(--font-headings);
 }
 
+img {
+    max-width: 100%;
+}
+
+a {
+    color: var(--color-primary);
+    text-decoration: none;
+}
+
 .container {
     max-width: 120rem;
     margin: 0 auto;
@@ -239,6 +248,10 @@ h6 {
     text-align: center;
 }
 
+.left {
+    text-align: left;
+}
+
 .recipe-footer a {
     background: var(--color-primary-dark);
     display: block;
@@ -339,7 +352,9 @@ h6 {
     color: var(--color-error-dark);
 }
 
-.form-content input {
+.form-content input,
+.form-content textarea,
+.form-content select {
     width: 100%;
     padding: 1rem;
     border-radius: .4rem;
@@ -371,6 +386,10 @@ h6 {
 
 .inline-form {
     display: inline;
+}
+
+.span-2 {
+    grid-column: span 2;
 }
 
 /* messages */
@@ -421,6 +440,25 @@ h6 {
 
 ::placeholder {
     color: rgba(100, 163, 200, 0.6);
+}
+
+/* Authors */
+.login-message {
+    margin: 1rem 0;
+}
+
+.authors-dashboard-container {
+    max-width: 64rem;
+    text-align: left;
+    padding: var(--spacing-gutter-medium);
+    margin: 0 auto;
+}
+
+.authors-dashboard-container h3,
+.authors-dashboard-container p,
+.authors-dashboard-container ul {
+    list-style-type: none;
+    margin: 1rem 0;
 }
 
 @media (max-width: 600px) {
