--- a/authors/templates/authors/pages/dashboard_recipe.html
+++ b/authors/templates/authors/pages/dashboard_recipe.html
@@ -1,19 +1,22 @@
 {% extends 'global/base.html' %}
 
 {% block title %}
-  Register
+  Dashboard Recipe
 {% endblock %}
 
 {% block content %}
   <div class="main-content center container">
-    <h2>Login</h2>
+    <h2>
+      Dashboard Recipe
+    </h2>
+    
+    {% include "global/partials/message.html" %}
     {% include "authors/partials/login_message.html" %}
+
+    <div class="left">
+      {% include "global/partials/form.html" %}
+    </div>
   </div>
 
-  {% include "global/partials/message.html" %}
-
-  {% if not user.is_authenticated %}
-    {% include "global/partials/form.html" %}
-  {% endif %}
   
 {% endblock %}
