--- a/base_templates/global/partials/form.html
+++ b/base_templates/global/partials/form.html
@@ -1,11 +1,11 @@
 <div class="main-content container">
-  <form class="main-form" action="{{ form_action }}" method="POST">
+  <form class="main-form" action="{{ form_action }}" method="POST" enctype="multipart/form-data">
 
     {% csrf_token %}
 
     <div class="form-content form-content-grid">
       {% for field in form %}
-        <div class="form-group">
+        <div class="form-group {{ field.field.widget.attrs.class }}">
           <label for="{{ field.id_for_label }}">{{ field.label }}</label>
           {{ field }}
 
@@ -14,6 +14,12 @@
           {% endif %}
 
           {{ field.errors }}
+
+          {% if field.name == "cover" and field.value.url %}
+          <div class="span-2">
+            <img src="{{field.value.url}}" alt="capa para {{recipe.title}}">
+          </div>
+          {% endif %}
         </div>
       {% endfor %}
     </div>
